# PhoenixSec

./: .gitignore  .phoenixsec-ignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  FEATURES.md  GETTING_STARTED.md  LICENSE  README.md  USER_GUIDE.md  add_epilogs.py  build_docker.ps1  config.yaml  main.py  patched_temp.py  pyproject.toml  scan_result_local.json  scan_result_local_ignored.json  test_file.py  test_file2.py  test_ssrf.py
--quiet/: vuln.py
.github/workflows/: security_scan.yml
benchmarks/: go_clean.go  go_vuln.go  metadata.json  php_clean.php  php_vuln.php  python_clean.py  python_vuln.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/reports/: page.tsx
dashboard/src/app/reports/[filename]/: page.tsx
dashboard/src/app/scan/: page.tsx
dashboard/src/lib/: api.ts
ide/phoenixsec-vscode/: extension.js
ide/vscode/: extension.js  package.json
ide/vscode-extension/: extension.js  package.json
samples/: VulnerableJavaApp.java  vulnerable_js_app.js  vulnerable_python_app.py
samples/vulnerable_files/: SQLi.java  cmd_injection.py  secrets.py  sqli.py
src/phoenixsec/: __init__.py  __main__.py
src/phoenixsec/api/: main.py  schema.py  server.py  webhook.py
src/phoenixsec/cli/: main.py
src/phoenixsec/core/: __init__.py  ai_patcher.py  analyzer.py  ast_analyzer.py  compliance.py  config.py  custom_rules.py  engine.py  exceptions.py  github_automation.py  logger.py  notifiers.py  patcher.py  red_teamer.py  rule_based_patcher.py  sca.py  scanner.py  secret_rotator.py  semgrep.py  suppression.py  taint_analyzer.py
src/phoenixsec/interfaces/: __init__.py  base_patcher.py  base_reporter.py  base_scanner.py
src/phoenixsec/lsp/: server.py
src/phoenixsec/models/: __init__.py  finding.py  report.py  scan_result.py  scan_target.py  vulnerability.py
src/phoenixsec/reporters/: __init__.py  console.py  html.py  json_reporter.py  sarif.py
src/phoenixsec/rules/: __init__.py  ast_rules.py  base_rule.py  broken_auth.py  command_injection.py  csrf.py  engine.py  iac.py  insecure_deserialization.py  ldap_injection.py  misconfiguration.py  nosql_injection.py  open_redirect.py  path_traversal.py  registry.py  secrets.py  semgrep_rules.yaml  sqli.py  ssrf.py  weak_crypto.py  xpath_injection.py  xss.py  xxe.py
src/phoenixsec/utils/: __init__.py  parser.py
tests/: conftest.py  test_ai_patcher.py  test_analyzer.py  test_api.py  test_ast_analyzer.py  test_benchmark_cli.py  test_broken_auth.py  test_cli.py  test_command_injection.py  test_compliance.py  test_config.py  test_cross_file_taint.py  test_csrf.py  test_custom_rules.py  test_deserialization.py  test_engine.py  test_finding_report.py  test_github_automation.py  test_go_php_rules.py  test_html_reporter.py  test_iac_rules.py  test_imports.py  test_ldap_injection.py  test_lsp.py  test_misconfiguration.py  test_models.py  test_new_fixes.py  test_nosql_injection.py  test_notifiers.py  test_open_redirect.py  test_parser.py  test_patcher.py  test_path_traversal.py  test_phase3_features.py  test_phase9.py  test_red_teamer.py  test_reporters.py  test_rule_engine.py  test_sarif_reporter.py  test_sca.py  (+12 more)
tmp_test/: test.py
