[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenixsec"
version = "0.1.0"
description = "Autonomous DevSecOps security pipeline — scan, report, patch."
authors = [{ name = "thefayid" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["security", "devsecops", "sast", "vulnerability-scanner", "cybersecurity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "loguru>=0.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[project.scripts]
phoenixsec = "phoenixsec.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff (linting + formatting) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # type annotations
]
ignore = [
    "ANN101", # missing self annotation — unnecessary
    "ANN102", # missing cls annotation
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "E501"]
"benchmarks/**/*.py" = ["ANN", "E501"]
"samples/**/*.py" = ["ANN", "E501", "E402", "F821"]

[tool.ruff.lint.isort]
known-first-party = ["phoenixsec"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
